--- a/pages/about.html
+++ b/pages/about.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="row">
                     <h1>About Me</h1>
-                    <p>I work as an I.T. specialist full-time at Lifetime Skin Care Centers. I also work for clients as an I.T. Director and help small businesses with their computer hardware or software issues. I am born and raises in Muncie, Indiana. I currently am going to college for an Associates Degree in Computer Science. I'm also taking Web Design classes on the side.<br>I'm currently planning on starting my own small business soon as a web designer. I'm fluent in HTML and CSS, and I'm now working on different languages like Javascript.</p>
+                    <p>I work as an I.T. specialist, full-time at Lifetime Skin Care Centers. I also work for clients as an I.T. Director and help small businesses with their computer hardware or software issues. I'm 19 and I was born and raised in Indiana. I am currently going to college for an Associates Degree in Computer Science. I'm also taking Web Design classes on the side.<br>I'm currently planning on starting my own small business soon as a web designer. I'm fluent in HTML and CSS, and I'm now working on different languages like Javascript.</p>
                 </div>
             </div>
         </div>
